Add SouthX to exchange section.  Remove FCB from exchange section. Update Roadmap.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/cratex.png"></a>
+                             <a href="https://www.southxchange.com/Market/Book/XSL/BTC"><img vspace=90 src="images/southx.png"></a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -214,12 +214,12 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                     </div>
                     <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://fcbaccount.com/fcb/exchange/XSL/BTC"><img src="images/fcb.png"></a>
+                            <a href="https://tradecx.io/markets/xslbtc"><img src="images/tradecx.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://tradecx.io/markets/xslbtc"><img src="images/tradecx.png"></a>
+                            <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/cratex.png"></a>
                         </div>
                     </div>
                 </div>
@@ -419,7 +419,6 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <div class="map-content-right">
 <ul>
 <li>Solo listed for trading at CRATEX</li>
-<li>Solo listed for trading at FirstCryptoBank</li>
 <li>v1.0.4.0 released, v17 Hardfork at block 350,001</li>
 	<div class="map-content-sm-right">
 	<ul>
@@ -456,7 +455,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <div class="map-content-right">
 <ul>
 <li>Solo listed for trading at exchange TradeCX</li>
-<li>soloOS - USB bootable operating system for mining on x86 systems released </li>
+<li>SoloOS - USB bootable operating system for mining on x86 systems released </li>
 <li>v1.0.4.5 and v1.0.4.6 released</li>
 	<div class="map-content-sm-right">
 	<ul>
@@ -514,6 +513,27 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
         <li>Multisig Messaging System</li>
         <li>Cold signing/storage support</li>
         <li>Added riscv64 support</li>
+	</ul>
+	</div>
+</ul></div>
+</div>
+</div>
+
+<div class="road-map-content">
+<div class="road-map-content-sec">
+	<div class="month-info2" style="padding-right:95px;">September</div>
+</div>
+<div class="road-map-content-sec-right">
+<div class="map-content-right">
+<ul>
+<li>Solo listed at <a href="https://southxchange.com/">SouthXchange</a></li>
+<li>v1.1.0.2 and v1.1.0.3 Released</li>
+	<div class="map-content-sm-right">
+	<ul>
+	<li>Better logging and info displayed during syncing</li>
+	<li>net_node code cleanup</li>
+	<li>Update mining_status command in solod to add Estimated Earnings with disclaimer included.</li>
+	<li>Add arg_fluffy_blocks / arg_no_fluffy_blocks flags</li>
 	</ul>
 	</div>
 </ul></div>
