Update roadmap and downloads sections (added linux/windows GUI and removed ARM binary links).

--- a/index.html
+++ b/index.html
@@ -238,7 +238,15 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                             <div class="download-sec">
                                 <a href="https://files.minesolo.com/solo-latest-linux64.zip"><img src="images/download-icon1.png"></a>
                             </div>
-                            <h2>Linux</h2>
+                            <h2>Linux (CLI)</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="download-col">
+                            <div class="download-sec">
+                                <a href="https://files.minesolo.com/solo-gui-latest-linux64.zip"><img src="images/download-icon1.png"></a>
+                            </div>
+                            <h2>Linux (GUI)</h2>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -246,7 +254,15 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                             <div class="download-sec">
                                 <a href="https://files.minesolo.com/solo-latest-win64.zip"><img src="images/download-icon2.png"></a>
                             </div>
-                            <h2>Windows</h2>
+                            <h2>Windows (CLI)</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="download-col">
+                            <div class="download-sec">
+                                <a href="https://files.minesolo.com/solo-gui-latest-win64.zip"><img src="images/download-icon2.png"></a>
+                            </div>
+                            <h2>Windows (GUI)</h2>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -254,7 +270,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                             <div class="download-sec">
                                 <a href="https://files.minesolo.com/solo-latest-macos64.zip"><img src="images/download-icon3.png"></a>
                             </div>
-                            <h2>Apple</h2>
+                            <h2>Apple (CLI)</h2>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -262,23 +278,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
                             <div class="download-sec">
                                 <a href="https://files.minesolo.com/solo-latest-android64.zip"><img src="images/download-icon4.png"></a>
                             </div>
-                            <h2>Android</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="download-col">
-                            <div class="download-sec">
-                                <a href="https://files.minesolo.com/solo-latest-arm64.zip"><img src="images/download-icon4.png"></a>
-                            </div>
-                            <h2>ARM64 LINUX</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="download-col">
-                            <div class="download-sec">
-                                <a href="https://files.minesolo.com/solo-latest-armhf.zip"><img src="images/download-icon4.png"></a>
-                            </div>
-                            <h2>ARMHF LINUX</h2>
+                            <h2>Android (CLI)</h2>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -540,6 +540,26 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 </div>
 </div>
 
+<div class="road-map-content">
+<div class="road-map-content-sec">
+	<div class="month-info">October / November</div> 
+</div>
+<div class="road-map-content-sec-right">
+<div class="map-content-right">
+<ul>
+<li>v1.1.0.4 Released</li>
+	<div class="map-content-sm-right">
+	<ul>
+	<li>Pause mining when disconnected from the network or syncing to a new top bloc.</li>
+	<li>Solo-GUI compatability changes</li>
+	<li>Upstream RingCT changes merged</li>
+	</ul>
+</ul>
+<li>Solo-GUI released for Windows and Linux with one click mining capability</li>
+</div>
+</div>
+</div>
+
 
 <div class="road-map-content">
 <div class="road-map-content-sec">
@@ -548,7 +568,6 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <div class="road-map-content-sec-right">
 <div class="map-content-right">
 <ul>
-<li>GUI Wallet and one click miner</li>
 <li>Blockchain based messaging </li>
 <li>Port Web wallet from Masari</li>
 <li>Android/iOS mobile apps with wallet, one click miner, and blockchain messaging </li>
