Add facebook link to footer.

--- a/index.html
+++ b/index.html
@@ -612,6 +612,9 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 								<li>
 									<a href="https://www.reddit.com/r/soloproject/"><img src="images/social-4.png"></a>
 								</li>
+								<li>
+									<a href="https://www.facebook.com/soloxsl"><img src="images/social-1.png"></a>
+								</li>
 							</ul>
 						</div>
 						<div class="copyright">Copyright © The Solo Project. All Rights Reserved. 2018-2019. <a href="https://www.minesolo.com/legal.html">Legal</a></div>
