--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <li>v1.1.0.4 Released</li>
 	<div class="map-content-sm-right">
 	<ul>
-	<li>Pause mining when disconnected from the network or syncing to a new top bloc.</li>
+	<li>Pause mining when disconnected from the network or syncing to a new top block</li>
 	<li>Solo-GUI compatability changes</li>
 	<li>Upstream RingCT changes merged</li>
 	</ul>
