--- a/index.html
+++ b/index.html
@@ -560,6 +560,23 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 </div>
 </div>
 
+<div class="road-map-content">
+<div class="road-map-content-sec">
+	<div class="month-info2" style="padding-right:100px;">December</div> 
+</div>
+<div class="road-map-content-sec-right">
+<div class="map-content-right">
+<ul>
+<li>v1.1.0.5 Released</li>
+	<div class="map-content-sm-right">
+	<ul>
+	<li>CN-IO PoW related fixes.  Alt_chains longer than 5 depth should now reorganize properly without a daemon restart, popping blocks, or importing a snapshot</li>
+	<li>Merge in latest changes from upstream Monero</li>
+	</ul>
+</div>
+</div>
+</div>
+
 
 <div class="road-map-content">
 <div class="road-map-content-sec">
@@ -570,7 +587,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <ul>
 <li>Blockchain based messaging </li>
 <li>Port Web wallet from Masari</li>
-<li>Android/iOS mobile apps with wallet, one click miner, and blockchain messaging </li>
+<li>Android/iOS mobile apps with wallet, one click miner, and blockchain messaging</li>
 <li>Technical whitepaper on CN-IO</li>
 <li>Benchmark Mode - Feature will allow user to benchmark device hashrates and cryptographically publish results to the blockchain</li>
 </ul>
