--- a/index.html
+++ b/index.html
@@ -197,27 +197,22 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
             <div class="container">
                 <div class="heading">Exchange</div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="exchange-logo">
                              <a href="https://www.southxchange.com/Market/Book/XSL/BTC"><img vspace=90 src="images/southx.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="exchange-logo">
                             <a href="https://bisq.network/"><img src="images/bisq.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="exchange-logo">
                             <a href="https://bia.do/trade/XSL-XMR"><img width=240 src="images/biado-dark-path.plain.svg"></a>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="exchange-logo">
-                            <a href="https://tradecx.io/markets/xslbtc"><img src="images/tradecx.png"></a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="exchange-logo">
                             <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/cratex.png"></a>
                         </div>
@@ -454,8 +449,7 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <div class="road-map-content-sec-right">
 <div class="map-content-right">
 <ul>
-<li>Solo listed for trading at exchange TradeCX</li>
-<li>SoloOS - USB bootable operating system for mining on x86 systems released </li>
+<li>SoloOS - USB bootable operating system for mining on x86_64 systems released </li>
 <li>v1.0.4.5 and v1.0.4.6 released</li>
 	<div class="map-content-sm-right">
 	<ul>
