Add icon for Reddit in footer, change link in footer to GitLab as intended.

--- a/index.html
+++ b/index.html
@@ -621,14 +621,18 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 									<a href="https://twitter.com/SoloXsl"><img src="images/social-2.png"></a>
 								</li>
 								<li>
-									<a href="https://www.reddit.com/r/soloproject/"><img src="images/social-4.png"></a>
+									<a href="https://gitlab.com/solo-project/solo/"><img src="images/social-4.png"></a>
 								</li>
 								<li>
 									<a href="https://www.facebook.com/soloxsl"><img src="images/social-1.png"></a>
 								</li>
+								<li>
+									<a href="https://www.reddit.com/r/SoloProject/"><img height=42 width=42 src="images/social-reddit.png"></a>
+								</li>
+
 							</ul>
 						</div>
-						<div class="copyright">Copyright © The Solo Project. All Rights Reserved. 2018-2019. <a href="https://www.minesolo.com/legal.html">Legal</a></div>
+						<div class="copyright">Copyright © The Solo Project. All Rights Reserved. 2018-2020. <a href="https://www.minesolo.com/legal.html">Legal</a></div>
 					</div>
 				</div>
 			</div>
