Update emission graph.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@
                                     <h2>Private</h2>
                                     <h1>Decentralized</h1>
                                     <h3>Fast</h3>
-                                    <ul>
-                                        <li><a href="#">POOL AND CENSORSHIP RESISTANT</a></li>
-                                    </ul>
                                     <a class="banner-text-btn js-scroll-trigger" href="#download"><strong>GET STARTED </strong>  <img src="images/btn-arrow.png"> </a>
                                 </div>
                                 <div class="banner-logo"></div>
@@ -144,7 +141,7 @@
 <div class="features-service">
 <img src="images/s-icon4.png">
 <h2>Decentralized</h2>
-<h3>CN-IO PoW for resistance to<br>mining pools</h3>
+<h3>CN-IO PoW requires a fully synced blockchain</h3>
 </div>
 
 
