Add whitepaper.  Update Roadmap.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <h2>Private</h2>
                                     <h1>Decentralized</h1>
                                     <h3>Fast</h3>
-                                    <a class="banner-text-btn js-scroll-trigger" href="#download"><strong>GET STARTED </strong>  <img src="images/btn-arrow.png"> </a>
+                                    <a class="banner-text-btn js-scroll-trigger" href="https://files.minesolo.com/Solo_Whitepaper_v1.0.pdf"><strong>Read the whitepaper</strong>  <img src="images/btn-arrow.png"> </a>
                                 </div>
                                 <div class="banner-logo"></div>
                             </div>
@@ -568,6 +568,26 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 </div>
 </div>
 
+<div class="road-map-content">
+<div class="roadmap-date">2020</div>
+<div class="road-map-content-sec">
+	<div class="month-info2">August</div>
+</div>
+<div class="road-map-content-sec-right">
+<div class="map-content-right">
+<ul>
+<li><a href="https://files.minesolo.com/Solo_Whitepaper_v1.0.pdf">Whitepaper</a> Released</li>
+<li>v1.1.0.6 Released</li>
+	<div class="map-content-sm-right">
+	<ul>
+	<li>Minor release to move alt_block PoW messages to the debug log level.</li>
+	</ul>
+	</div>
+<li>Tested changes planned for v15 Hardfork. <a href="https://steemit.com/cryptocurrency/@rtmoney/solo-hardfork-testnet-post-mortem-analysis">Analysis</a></li>
+</ul>
+</div>
+</div>
+</div>
 
 <div class="road-map-content">
 <div class="road-map-content-sec">
@@ -579,7 +599,6 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <li>Blockchain based messaging </li>
 <li>Port Web wallet from Masari</li>
 <li>Android/iOS mobile apps with wallet, one click miner, and blockchain messaging</li>
-<li>Technical whitepaper on CN-IO</li>
 <li>Benchmark Mode - Feature will allow user to benchmark device hashrates and cryptographically publish results to the blockchain</li>
 </ul>
 </div>
