--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <h2>Private</h2>
                                     <h1>Decentralized</h1>
                                     <h3>Fast</h3>
-                                    <a class="banner-text-btn js-scroll-trigger" href="https://files.minesolo.com/Solo_Whitepaper_v1.0.pdf"><strong>Read the whitepaper</strong>  <img src="images/btn-arrow.png"> </a>
+                                    <a class="banner-text-btn js-scroll-trigger" href="Solo_Whitepaper_v1.0.pdf"><strong>Read the whitepaper</strong>  <img src="images/btn-arrow.png"> </a>
                                 </div>
                                 <div class="banner-logo"></div>
                             </div>
